# pipebuilder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  e2e.yml
e2e/: Cargo.toml  README.md  etcd.yml  setup-ci.sh  setup-data-volume.sh
e2e/resources/: api.yml  builder.yml  cli.yml  repository.yml  scheduler.yml
e2e/src/: build.rs  catalog.rs  lib.rs  node.rs  utils.rs
e2e/tests/timer/catalog_schemas/: timer_schema.json
e2e/tests/timer/catalogs/: catalogs.yml  timer.yml
examples/: README.md  ci.yml
examples/resources/: api.yml  builder0.yml  builder1.yml  repository.yml  scheduler.yml
examples/timer/: pipe.yml
pipebuilder/: Cargo.toml  README.md
pipebuilder/resources/: api.yml  builder.yml  manifest.yml  repository.yml
pipebuilder/src/api/: admin.rs  api.rs  app.rs  bootstrap.rs  build.rs  catalog_schema.rs  catalogs.rs  config.rs  main.rs  manifest.rs  namespace.rs  node.rs  project.rs  utils.rs  validations.rs
pipebuilder/src/builder/: app.rs  bootstrap.rs  build.rs  config.rs  server.rs
pipebuilder/src/cli/: app.rs  config.rs  main.rs
pipebuilder/src/cli/commands/: activate.rs  cancel.rs  create.rs  deactivate.rs  delete.rs  get.rs  list.rs  mod.rs  pull.rs  push.rs  scan.rs  shutdown.rs
pipebuilder/src/cli/ops/: do_app.rs  do_build.rs  do_builder.rs  do_catalog_schema.rs  do_catalogs.rs  do_manifest.rs  do_namespace.rs  do_node.rs  do_project.rs  do_reqwest.rs  mod.rs  print.rs
pipebuilder/src/manifest/: app.rs  bootstrap.rs  config.rs  manifest.rs
pipebuilder/src/repository/: app.rs  bootstrap.rs  config.rs  main.rs  repository.rs
pipebuilder/src/scheduler/: app.rs  bootstrap.rs  config.rs  schedule.rs
pipebuilder_common/: Cargo.toml  README.md  build.rs
pipebuilder_common/proto/: build.proto  builder.proto  health.proto  manifest.proto  node.proto  repository.proto  schedule.proto
pipebuilder_common/src/: app.rs  bootstrap.rs  build.rs  catalog.rs  config.rs  constant.rs  constants.rs  error.rs  errors.rs  lib.rs  logging.rs  manifest.rs  namespace.rs  node.rs  project.rs  register.rs  registry.rs  resource.rs  schedule.rs  utils.rs
pipebuilder_common/src/api/: client.rs  constants.rs  mod.rs  models.rs
pipebuilder_common/src/grpc/: build.rs  client.rs  health.rs  manifest.rs  mod.rs  node.rs  repository.rs  schedule.rs
pipebuilder_common/src/service/: health.rs  lease.rs  mod.rs  node.rs
pipebuilder_mock/: Cargo.toml  README.md
pipebuilder_mock/resources/: mock.yml
pipebuilder_mock/src/: admin.rs  api.rs  app.rs  bootstrap.rs  catalogs.rs  config.rs  main.rs  utils.rs
