[package]
name = "pipebuilder"
version = "0.1.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"

[[bin]]
name = "api"
path = "src/api/app.rs"

[[bin]]
name = "builder"
path = "src/builder/app.rs"

[[bin]]
name = "scheduler"
path = "src/scheduler/app.rs"

[[bin]]
name = "manifest"
path = "src/manifest/app.rs"

[dependencies]
etcd-client = "0.7.2"
chrono = { version = "0.4" }
flurry = "0.3.1"
pipebuilder_common = { version = "0.1.0", path = "../pipebuilder_common" }
prost = "0.8"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.5"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3.1"

[build-dependencies]
tonic-build = "0.5"