[package]
name = "pipebuilder"
version = "0.1.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebuilder"
homepage = "https://github.com/pipebase/pipebuilder"
documentation = "https://docs.rs/pipebuilder/"
description = "CI for pipebase application"
keywords = ["pipebase", "continous-integration"]

[[bin]]
name = "api"
path = "src/api/app.rs"

[[bin]]
name = "builder"
path = "src/builder/app.rs"

[[bin]]
name = "pbctl"
path = "src/cli/app.rs"

[[bin]]
name = "scheduler"
path = "src/scheduler/app.rs"

[[bin]]
name = "repository"
path = "src/repository/app.rs"

[dependencies]
chrono = { version = "0.4" }
clap = "3.0.0-beta.2"
etcd-client = "0.7.2"
flurry = "0.3.1"
http = "0.2.5"
pipebuilder_common = { version = "0.1.0", path = "../pipebuilder_common" }
prost = "0.8"
reqwest = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
termcolor = "1.1"
tonic = "0.5"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = "0.3.1"

[build-dependencies]
tonic-build = "0.5"