[package]
name = "pipebuilder"
version = "0.1.8"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebuilder"
homepage = "https://github.com/pipebase/pipebuilder"
description = "CI for pipebase application"
keywords = ["pipebase", "CI"]

[[bin]]
name = "api"
path = "src/api/main.rs"

[[bin]]
name = "builder"
path = "src/builder/main.rs"

[[bin]]
name = "pbctl"
path = "src/cli/main.rs"

[[bin]]
name = "scheduler"
path = "src/scheduler/main.rs"

[[bin]]
name = "repository"
path = "src/repository/main.rs"

[dependencies]
chrono = { version = "0.4" }
clap = "3.0.0-rc.0"
etcd-client = "0.7.2"
flurry = "0.3.1"
futures-util = "0.3"
http = "0.2.5"
pipebuilder_common = { version = "0.1.8", path = "../pipebuilder_common" }
prost = "0.9"
reqwest = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
termcolor = "1.1"
tonic = "0.6"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = "0.3.1"
