[package]
name = "pipebuilder_common"
version = "0.1.0"
edition = "2018"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
etcd-client = { version = "0.7.2", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8"
thiserror = "1.0.29"
prost = "0.8"
tonic = "0.5"
tokio = { version = "1.11.0", features = ["time"] }
tracing = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.5"