[package]
name = "pipebuilder_common"
version = "0.1.6"
edition = "2018"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebuilder"
homepage = "https://github.com/pipebase/pipebuilder"
documentation = "https://docs.rs/pipebuilder_common/"
description = "lib for pipebuilder components"
keywords = ["pipebase", "pipebuilder", "CI"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
etcd-client = { version = "0.7.2", features = ["tls"] }
filetime = "0.2.15"
fnv = "1.0.7"
fslock = "0.2.0"
http = "0.2.5"
reqwest = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8"
thiserror = "1.0.29"
prost = "0.8"
pipegen = "0.1.15"
toml = "0.5.8"
tonic = "0.5"
tokio = { version = "1.11.0", features = ["process", "time", "fs"] }
tracing = "0.1"

[build-dependencies]
tonic-build = "0.5"