[package]
name = "pipebuilder_mock"
version = "0.1.0"
edition = "2018"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebuilder"
homepage = "https://github.com/pipebase/pipebuilder"
description = "pipebuilder api mock server"
readme = "README.md"
keywords = ["pipebase", "pipebuilder", "CI"]

[[bin]]
name = "mock"
path = "src/main.rs"

[dependencies]
http = "0.2.5"
pipebuilder_common = { version = "0.2.2", path = "../pipebuilder_common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = "0.3.1"
